# LearningNet

./: .gitignore  LearningNet.php  README.md  composer.json  install.sh  package.json  plugin.manifest  webpack.config.js
backend/: CMakeLists.txt  README.md  example_check.json  example_create.json  main.cpp  test-main.cpp
backend/cmake/: FindLEMON.cmake
backend/doc/: DoxygenLayout.xml  doxygen.cfg  mainpage.dox
backend/include/learningnet/: ActivitySetter.hpp  Compressor.hpp  LearningNet.hpp  Module.hpp  NetworkChecker.hpp  Recommender.hpp
backend/src/learningnet/: LearningNet.cpp
backend/test/: check_test.cpp  compress_test.cpp  compressor.cpp  experiments.cpp  generate.cpp  recommend_test.cpp  resources.hpp
backend/test/resources/: example_check.json  x.json
backend/test/resources/compress/in/: example.lgf
backend/test/resources/dag/DAGmar-lgf/: uniform_n100_e1060_i0.graphml.lgf  uniform_n100_e1060_i1.graphml.lgf  uniform_n100_e1060_i2.graphml.lgf  uniform_n100_e1060_i3.graphml.lgf  uniform_n100_e1060_i4.graphml.lgf  uniform_n100_e1060_i5.graphml.lgf  uniform_n100_e1060_i6.graphml.lgf  uniform_n100_e1060_i7.graphml.lgf  uniform_n100_e1060_i8.graphml.lgf  uniform_n100_e1060_i9.graphml.lgf  uniform_n100_e160_i0.graphml.lgf  uniform_n100_e160_i1.graphml.lgf  uniform_n100_e160_i2.graphml.lgf  uniform_n100_e160_i3.graphml.lgf  uniform_n100_e160_i4.graphml.lgf  uniform_n100_e160_i5.graphml.lgf  uniform_n100_e160_i6.graphml.lgf  uniform_n100_e160_i7.graphml.lgf  uniform_n100_e160_i8.graphml.lgf  uniform_n100_e160_i9.graphml.lgf  uniform_n100_e260_i0.graphml.lgf  uniform_n100_e260_i1.graphml.lgf  uniform_n100_e260_i2.graphml.lgf  uniform_n100_e260_i3.graphml.lgf  uniform_n100_e260_i4.graphml.lgf  uniform_n100_e260_i5.graphml.lgf  uniform_n100_e260_i6.graphml.lgf  uniform_n100_e260_i7.graphml.lgf  uniform_n100_e260_i8.graphml.lgf  uniform_n100_e260_i9.graphml.lgf  uniform_n100_e360_i0.graphml.lgf  uniform_n100_e360_i1.graphml.lgf  uniform_n100_e360_i2.graphml.lgf  uniform_n100_e360_i3.graphml.lgf  uniform_n100_e360_i4.graphml.lgf  uniform_n100_e360_i5.graphml.lgf  uniform_n100_e360_i6.graphml.lgf  uniform_n100_e360_i7.graphml.lgf  uniform_n100_e360_i8.graphml.lgf  (+1921 more)
backend/test/resources/exception/: missing_condition_branch.lgf  missing_ref.lgf  missing_target.lgf  missing_type.lgf
backend/test/resources/instances/: randomDag-g.10.1.graphml-0.lgf  randomDag-g.10.1.graphml-2.lgf  randomDag-g.10.2.graphml-1.lgf  randomDag-g.10.2.graphml-4.lgf  randomDag-g.10.3.graphml-1.lgf  randomDag-g.10.3.graphml-3.lgf  randomDag-g.10.4.graphml-0.lgf  randomDag-g.10.4.graphml-1.lgf  randomDag-g.10.4.graphml-5.lgf  randomDag-g.10.5.graphml-1.lgf  randomDag-g.10.5.graphml-3.lgf  randomDag-g.10.5.graphml-4.lgf  randomDag-g.10.6.graphml-3.lgf  randomDag-g.10.7.graphml-3.lgf  randomDag-g.10.8.graphml-4.lgf  randomDag-g.10.9.graphml-4.lgf  randomDag-g.100.1.graphml-0.lgf  randomDag-g.100.1.graphml-3.lgf  randomDag-g.100.10.graphml-0.lgf  randomDag-g.100.10.graphml-1.lgf  randomDag-g.100.10.graphml-5.lgf  randomDag-g.100.2.graphml-0.lgf  randomDag-g.100.2.graphml-1.lgf  randomDag-g.100.5.graphml-1.lgf  randomDag-g.100.5.graphml-5.lgf  randomDag-g.100.6.graphml-1.lgf  randomDag-g.100.6.graphml-4.lgf  randomDag-g.100.6.graphml-5.lgf  randomDag-g.100.7.graphml-1.lgf  randomDag-g.100.7.graphml-3.lgf  randomDag-g.100.8.graphml-1.lgf  randomDag-g.100.9.graphml-4.lgf  randomDag-g.11.1.graphml-0.lgf  randomDag-g.11.10.graphml-1.lgf  randomDag-g.11.2.graphml-4.lgf  randomDag-g.11.3.graphml-1.lgf  randomDag-g.11.3.graphml-4.lgf  randomDag-g.11.4.graphml-0.lgf  randomDag-g.11.4.graphml-1.lgf  randomDag-g.11.5.graphml-4.lgf  (+4983 more)
backend/test/resources/invalid/: DAGmar-uniform_n100_e160_i6.graphml-3.lgf  DAGmar-uniform_n100_e660_i2.graphml-5.lgf  DAGmar-uniform_n20_e52_i9.graphml-3.lgf  DAGmar-uniform_n300_e1680_i7.graphml-1.lgf  DAGmar-uniform_n320_e512_i0.graphml-5.lgf  DAGmar-uniform_n360_e3456_i0.graphml-1.lgf  arcs_join_out.lgf  arcs_split_in.lgf  arcs_unit_in.lgf  arcs_unit_out.lgf  condition__else_branch_missing.lgf  condition_branch_missing.lgf  condition_else_not_to_target.lgf  conditions_simple.lgf  cyclic_complex.lgf  cyclic_simple_target_not_reachable.lgf  cyclic_simple_target_reachable.lgf  north-g.10.86.graphml-1.lgf  north-g.14.68.graphml-1.lgf  north-g.18.4.graphml-1.lgf  north-g.20.45.graphml-1.lgf  north-g.35.10.graphml-1.lgf  north-g.64.14.graphml-5.lgf  north-g.64.16.graphml-5.lgf  not_compressable.lgf  randomDag-g.10.3.graphml-1.lgf  randomDag-g.11.4.graphml-1.lgf  randomDag-g.16.4.graphml-5.lgf  randomDag-g.17.3.graphml-2.lgf  randomDag-g.20.4.graphml-3.lgf  test_lower_to_target.lgf
backend/test/resources/json/: check_invalid.json  invalid2.json  recommend_active_swe.json  recommend_active_swe_2.json  recommend_path.json
backend/test/resources/random-dag-lgf/: g.10.1.graphml.lgf  g.10.10.graphml.lgf  g.10.2.graphml.lgf  g.10.4.graphml.lgf  g.10.6.graphml.lgf  g.10.7.graphml.lgf  g.100.3.graphml.lgf  g.100.5.graphml.lgf  g.100.8.graphml.lgf  g.11.10.graphml.lgf  g.11.2.graphml.lgf  g.11.5.graphml.lgf  g.11.6.graphml.lgf  g.11.7.graphml.lgf  g.11.9.graphml.lgf  g.12.10.graphml.lgf  g.12.2.graphml.lgf  g.12.5.graphml.lgf  g.12.7.graphml.lgf  g.12.8.graphml.lgf  g.13.10.graphml.lgf  g.13.4.graphml.lgf  g.13.5.graphml.lgf  g.13.6.graphml.lgf  g.14.1.graphml.lgf  g.14.2.graphml.lgf  g.14.3.graphml.lgf  g.14.4.graphml.lgf  g.14.5.graphml.lgf  g.14.6.graphml.lgf  g.14.7.graphml.lgf  g.14.8.graphml.lgf  g.14.9.graphml.lgf  g.15.2.graphml.lgf  g.15.4.graphml.lgf  g.15.8.graphml.lgf  g.16.1.graphml.lgf  g.16.10.graphml.lgf  g.16.2.graphml.lgf  g.16.4.graphml.lgf  (+448 more)
backend/test/resources/valid/: condition.lgf  condition_partial_to_join.lgf  condition_simple.lgf  conditions_simple.lgf  example_swe.lgf  no_condition.lgf  not_compressable.lgf  pre_top_sort.lgf  pre_top_sort_2.lgf  randomDag-g.10.4.graphml-1.lgf  randomDag-g.73.1.graphml-1.lgf  simple.lgf  split_partial_to_join.lgf  split_to_join.lgf  test_higher_to_target.lgf  test_simple.lgf
src/Pathfinder/src/: CMakeLists.txt  main.cc
(+22741 files in other folders)
